--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node starter.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/wahengchang/node-uwants-scraper#readme",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "colors": "^1.2.1",
     "es6-promise": "^4.2.4",
     "isomorphic-fetch": "^2.2.1"
   }
