--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "cheerio": "^1.0.0-rc.2",
     "colors": "^1.2.1",
     "es6-promise": "^4.2.4",
-    "isomorphic-fetch": "^2.2.1"
+    "firebase-admin": "^5.12.0",
+    "isomorphic-fetch": "^2.2.1",
+    "leancloud-storage": "^3.6.4"
+  },
+  "devDependencies": {
+    "jest": "^22.4.3"
   }
 }
